# amapi

./: .coveragerc  .gitignore  .pre-commit-config.yaml  README.rst  config_file.toml  get_reports.py  pyproject.toml  tox.ini
.github/workflows/: ci.yml
amapi/: __init__.py  exceptions.py  request.py  session.py
stubs/sp_api/: api.pyi  base.pyi
tests/: __init__.py  test_exceptions.py  test_session.py
tests/test_request/: test_base_request.py  test_generate_report_request.py  test_get_document_id_request.py  test_get_document_url_request.py  test_methhods.py
